--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "3dfolio",
+  "homepage": "https://phamandy300.github.io/landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -29,7 +30,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.3.21",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.7",
     "three": "^0.167.1",
